Utilisation de jQuery pour les evts, resize de l'image, ajouts de logs

--- a/ACQC.html
+++ b/ACQC.html
@@ -15,7 +15,7 @@
 
 <body>
     <h1 id="label">Nom de categorie</h1>    
-	<img id="picture" src="images/Moto/motorcycle-8.jpg" onclick="clickHandler();" width="50%"/>
+	<img id="picture"/>
 	<!-- <img id="picture" src="images/Moto/motorcycle-8.jpg" onclick="clickHandler();"  width="50%"/> -->
 	<!-- <img src="images/arrow-blue-outline-right.jpg" onclick="clickHandler();" width="50"/> -->
 	<script type="text/javascript" src="scripts/list_files.json"></script>
